osprey_worker/src/osprey/engine/query_language/tests/test_regex_match/test_regex_match_fails_with_invalid_item_node.txt
error: expected variable
--> main.sml:1:18
     |
   1 | RegexMatch(target='Jake', pattern='^foo$')
     |                   ^ argument `target` must be a variable